# vamp-ecoacoustics

./: .gitignore  ACIPlugin.cpp  ACIPlugin.h  CMakeLists.txt  Makefile  README.md  TemporalEntropyPlugin.h  plugins.cpp  vamp-plugin.list  vamp-plugin.map
.github/workflows/: build.yml
ext/: pocketfft_hdronly.h
src/: ACIBasePlugin.cpp  ACIBasePlugin.h  ACIPlugin.cpp  ACIPlugin.h  ACIaccPlugin.cpp  ACIaccPlugin.h  ACImtPlugin.cpp  ACImtPlugin.h  ADIPlugin.cpp  ADIPlugin.h  ADIaccPlugin.cpp  ADIaccPlugin.h  AEIPlugin.cpp  AEIPlugin.h  AEIaccPlugin.cpp  AEIaccPlugin.h  AmplitudeIndexPlugin.cpp  AmplitudeIndexPlugin.h  BIPlugin.cpp  BIPlugin.h  BIaccPlugin.cpp  BIaccPlugin.h  EcoacousticSpectralPlugin.cpp  EcoacousticSpectralPlugin.h  FFT.cpp  HPlugin.cpp  HPlugin.h  NDSIPlugin.cpp  NDSIPlugin.h  PluginAdapter.cpp  RealTime.cpp  SHPlugin.cpp  SHPlugin.h  THPlugin.cpp  THPlugin.h  TemporalEntropyPlugin.cpp  plugins.cpp  vamp-ecoacoustics.def
